Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: index
-title: "Android/iOS/React Native/Web相关"
-description: "探索尝试，发现未知可能！记录我学习使用Android/iOS开发、React Native、VPS、Linux、Web建站、Jekyll等技术过程中遇到的问题/解决办法，及一些个人心得总结。"
+title: ""
+description: ""
 ---
 {% if page.paginator %}
   {% assign paginator = page.paginator %}
